feat: implement thread-safe TriageQueue with lock-protected upgradeLevel and immutable snapshot